--- a/app/src/main/res/layout/row_payment_history.xml
+++ b/app/src/main/res/layout/row_payment_history.xml
@@ -17,91 +17,109 @@
         android:layout_marginBottom="@dimen/margin_8dp"
         android:padding="@dimen/dimen_7"
         android:orientation="vertical"
-        android:background="@drawable/personal_trainer_stroke_bg">
+        android:background="@drawable/payment_history_rect">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
 
-            <LinearLayout
+            <RelativeLayout
+                android:layout_alignParentStart="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:orientation="horizontal"
+                android:padding="@dimen/dimen_5">
+
+                <TextView
+                    android:id="@+id/tvDate"
+                    android:text="@string/date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/font_13sp"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:fontFamily="@font/avenir_light" />
+
+                <TextView
+                    android:id="@+id/payment_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="20:05:2017"
+                    android:layout_marginStart="@dimen/dimen_2"
+                    android:layout_toEndOf="@+id/tvDate"
+                    android:textSize="@dimen/font_12sp"
+                    android:textColor="@color/colorPrimary"
+                    android:fontFamily="@font/avenir_light" />
+
+
+                <TextView
+                    android:id="@+id/payment_status"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:paddingStart="@dimen/margin_8dp"
+                    android:paddingEnd="@dimen/margin_8dp"
+                    android:backgroundTint="@color/colorPaymentStatusBg"
+                    android:background="@drawable/rect_gray_solid"
+                    android:layout_marginStart="@dimen/dimen_5"
+                    android:layout_toEndOf="@+id/payment_date"
+                    android:textSize="@dimen/font_12sp"
+                    android:textColor="@color/colorBookingSuccess"
+                    android:fontFamily="@font/avenir_black" />
+
+
+
+            </RelativeLayout>
+
+
+             <RelativeLayout
+                android:layout_alignParentEnd="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
                 android:layout_marginStart="@dimen/dimen_5"
                 android:padding="@dimen/dimen_5">
 
                 <TextView
+                    android:id="@+id/tv_payment_method"
+                    android:text="@string/mode"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    userName="@{paymentHistoryViewModel.amount}"
-                    android:textSize="@dimen/font_13sp"
+                    android:textSize="@dimen/font_12sp"
                     android:textColor="@color/colorPrimaryDark"
-                    android:fontFamily="@font/avenir_black" />
+                    android:fontFamily="@font/avenir_light" />
 
                 <TextView
-                    android:layout_marginTop="@dimen/margin_4dp"
+                    android:id="@+id/payment_mode"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=""
-                    amount="@{paymentHistoryViewModel.amount}"
+                    android:layout_marginStart="@dimen/dimen_5"
+                    android:layout_toEndOf="@+id/tv_payment_method"
                     android:textSize="@dimen/font_12sp"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/black"
                     android:fontFamily="@font/avenir_black" />
 
-                <LinearLayout
-                    android:id="@+id/llTrainerReview"
-                    android:layout_width="wrap_content"
-                    android:visibility="gone"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
 
-                    <LinearLayout
-                        android:id="@+id/llRating"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginTop="@dimen/dimen_5"
-                        android:layout_marginBottom="@dimen/dimen_5"
-                        android:background="@drawable/rating_bg"
-                        android:padding="@dimen/dimen_5"
-                        android:layout_gravity="center_vertical">
-
-                        <ImageView
-                            android:layout_width="@dimen/dimen_10"
-                            android:layout_height="@dimen/dimen_10"
-                            android:src="@drawable/review"
-                            android:layout_gravity="center_vertical"/>
-
-                        <TextView
-                            android:id="@+id/tvRating"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="@dimen/dimen_3"
-                            android:textSize="@dimen/font_10sp"
-                            android:layout_gravity="center_vertical"
-                            android:textColor="@color/colorPrimary"
-                            android:fontFamily="@font/avenir_light" />
-
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/tvReview"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/dimen_5"
-                        android:textSize="@dimen/font_12sp"
-                        android:layout_gravity="center_vertical"
-                        android:gravity="center_vertical"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:fontFamily="@font/avenir_light" />
+            </RelativeLayout>
 
 
 
-                </LinearLayout>
-            </LinearLayout>
-        </LinearLayout>
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/tv_tenure"
+            android:textSize="@dimen/font_12sp"
+            android:textColor="@color/black"
+            android:padding="@dimen/dimen_7"
+            android:visibility="invisible"
+            android:fontFamily="@font/avenir_black"
+            android:text="Plus- 1 Month Full Package"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </TextView>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -115,21 +133,16 @@
                 android:layout_centerVertical="true"
                 android:padding="@dimen/dimen_7">
 
-                <ImageView
-                    android:layout_width="@dimen/dimen_10"
-                    android:layout_height="@dimen/dimen_10"
-                    android:src="@drawable/location"
-                    android:layout_gravity="center_vertical"/>
 
                 <TextView
+                    android:id="@+id/tvAmount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="@dimen/font_10sp"
-                    android:textColor="@color/colorText"
-                    android:fontFamily="@font/avenir_light"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="@dimen/dimen_5"/>
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/font_14sp"
+                    android:fontFamily="@font/avenir_black"
+                    android:layout_gravity="center_vertical" />
 
             </LinearLayout>
 
@@ -138,15 +151,16 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:text="@string/book"
+                android:text="@string/download_invoice"
                 android:textSize="@dimen/font_10sp"
-                android:textColor="@color/white"
+                android:drawablePadding="@dimen/dimen_5"
+                android:drawableStart="@drawable/invoice"
+                android:textColor="@color/red"
                 android:paddingTop="@dimen/dimen_5"
                 android:paddingBottom="@dimen/dimen_5"
                 android:paddingStart="@dimen/dimen_15"
                 android:paddingEnd="@dimen/dimen_15"
-                android:background="@drawable/rating_bg"
-                android:backgroundTint="@color/colorPrimary"/>
+                android:background="@drawable/rect_payment_white_solid" />
 
         </RelativeLayout>
     </LinearLayout>
